# compiler_detection

./: CMakeLists.txt  LICENSE  README.md  compile_features.h
cmake/: findCompilerDetection.cmake
include/: compiler_detection.hpp
include/compile_features/: compile_features.h
include/compiler_detection/: compiler_detection.h  short.hpp
src/: main.cpp
